implement for ui mobile tablet desktop

--- a/dreamshare.html
+++ b/dreamshare.html
@@ -19,7 +19,9 @@
   <header>
     <div class="container">
 
-      <img class="bigmap" src="./assets/images/Background (2).webp" alt="bitmap">
+      <img class="bigmap-desktop" src="./assets/images/images.desktop/Background (2).webp" alt="bitmap">
+      <img class="bigmap-tablet" src="./assets/images/images.tablet/backgound.tablet.webp" alt="bigmap">
+      <img class="bigmap-mobile" src="./assets/images/images.mobile/Background (4).webp" alt="bigmap">
 
       <div class="navigation color">
         <span>DREAMSHARE</span>
@@ -32,10 +34,10 @@
       </div>
 
       <div class="centered-title color">
-        <h1 class=" share-your">SHARE YOUR <br>
+        <h1 class="share-your">SHARE YOUR <br>
           HOLIDAY DREAM
         </h1>
-        <h2 class="perfect-partner">And find the perfect partner to fullfill it</h2>
+        <h2 class="perfect-partner">And find the perfect partner <br class="line-break"> to fullfill it</h2>
         <div class="border-holiday">
           <h4 class="holiday-partner">Find your holiday partner</h4>
         </div>
@@ -51,21 +53,42 @@
       <div class="container-one margin-top-container">
         <h3 class="center-text">How Dreamshare Works?</h3>
 
-        <div class="container-images">
-          <img src="./assets/images/Step 1.webp" alt="step">
-          <img src="./assets/images/Step 2.webp" alt="step">
-          <img src="./assets/images/Step 3.webp" alt="step">
+        <div class="container-images-desktop">
+          <img src="./assets/images/images.desktop/Step 1.webp" alt="step">
+          <img src="./assets/images/images.desktop/Step 2.webp" alt="step">
+          <img src="./assets/images/images.desktop/Step 3.webp" alt="step">
 
         </div>
+
+        <div class="container-images-tablet">
+          <img src="./assets/images/images.tablet/Step 1 (1).webp" alt="step">
+          <img src="./assets/images/images.tablet/Step 2 (1).webp" alt="step">
+          <img src="./assets/images/images.tablet/Step 3 (2).webp" alt="step">
+
+        </div>
+
+        <div class="container-images-mobile">
+          <img src="./assets/images/images.mobile/Step 1 (1).webp" alt="step">
+          <img src="./assets/images/images.mobile/Step 2 (2).webp" alt="step">
+          <img src="./assets/images/images.mobile/Step 3 (3).webp" alt="step">
+
+        </div>
+
       </div>
 
       <div class="container-two margin-top-container">
         <h3 class="center-text">Meet a partner for your best holiday</h3>
         <div class="container-images">
-          <img src="./assets/images/Person.webp" alt="person">
-          <img src="./assets/images/Person Copy.webp" alt="person">
-          <img src="./assets/images/Person Copy 2.webp" alt="person">
-          <img src="./assets/images/Person Copy 3.webp" alt="person">
+          <div class="images-person">
+            <img src="./assets/images/images.desktop/Person.webp" alt="person">
+            <img src="./assets/images/images.desktop/Person Copy.webp" alt="person">
+          </div>
+          <div class="images-person">
+            <img src="./assets/images/images.desktop/Person Copy 2.webp" alt="person">
+            <img src="./assets/images/images.desktop/Person Copy 3.webp" alt="person">
+          </div>
+
+
         </div>
 
         <div class="see-other-partners">
@@ -77,18 +100,45 @@
       <div class="container-three margin-top-container">
         <h3 class="center-text">Discover holiday activity ideas</h3>
 
-        <div class="activity-ideas">
-          <img src="./assets/images/Sport and Activis.webp" alt="">
-          <img src="./assets/images/Healath.webp" alt="">
-          <img src="./assets/images/Extreme.webp" alt="">
+        <div class="activity-ideas-desktop">
+          <img src="./assets/images/images.desktop/Sport and Activis.webp" alt="ideas">
+          <img src="./assets/images/images.desktop/Healath.webp" alt="ideas">
+          <img src="./assets/images/images.desktop/Extreme.webp" alt="ideas">
         </div>
 
-        <div class="activity-ideas"><img src="./assets/images/Games.webp" alt="">
-          <img src="./assets/images/Culture.webp" alt="">
+        <div class="activity-ideas-desktop"><img src="./assets/images/images.desktop/Games.webp" alt="ideas">
+          <img src="./assets/images/images.desktop/Culture.webp" alt="ideas">
         </div>
 
-        <div class="activity-ideas"><img src="./assets/images/Culture Copy.webp" alt="">
-          <img src="./assets/images/Games Copy.webp" alt="">
+        <div class="activity-ideas-desktop"><img src="./assets/images/images.desktop/Culture Copy.webp" alt="ideas">
+          <img src="./assets/images/images.desktop/Games Copy.webp" alt="ideas">
+        </div>
+
+        <div class="activity-ideas-tablet">
+          <img src="./assets/images/images.tablet/Sport.webp" alt="ideas">
+          <img src="./assets/images/images.tablet/Healath (1).jpg" alt="ideas">
+          <img src="./assets/images/images.tablet/Extreme (1).jpg" alt="ideas">
+        </div>
+
+        <div class="activity-ideas-tablet"><img src="./assets/images/images.tablet/Games (1).jpg" alt="ideas">
+          <img src="./assets/images/images.tablet/Culture (1).jpg" alt="ideas">
+        </div>
+
+        <div class="activity-ideas-tablet"><img src="./assets/images/images.tablet/Culture Copy (1).jpg" alt="ideas">
+          <img src="./assets/images/images.tablet/Games Copy (2).jpg" alt="ideas">
+        </div>
+
+        <div class="activity-ideas-mobile">
+          <img src="./assets/images/images.mobile/Sport (1).jpg" alt="ideas">
+          <img src="./assets/images/images.mobile/Healath (2).webp" alt="ideas">
+          <img src="./assets/images/images.mobile/Extreme (2).webp" alt="ideas">
+
+
+          <img src="./assets/images/images.mobile/Games (2).webp" alt="ideas">
+          <img src="./assets/images/images.mobile/Culture (2).webp" alt="ideas">
+
+          <img src="./assets/images/images.mobile/Culture Copy (2).webp" alt="ideas">
+          <img src="./assets/images/images.mobile/Games Copy (3).webp" alt="ideas">
         </div>
 
       </div>
@@ -116,20 +166,24 @@
         <span class="text-company">Company</span>
 
         <div class="text-column-two">
-          <span>About</span>
-          <span>Contact</span>
-          <span>press</span>
-          <span>Blog</span>
+          <div class="footer-link"><span>About</span>
+            <span>Contact</span>
+            <span>press</span>
+            <span>Blog</span>
+          </div>
 
-          <span>Terms and Privacy</span>
-          <span>Help</span>
+          <div class="footer-link">
+            <span>Terms and Privacy</span>
+            <span>Help</span>
+          </div>
+
         </div>
 
       </div>
       <span class="text-partners">Partners</span>
       <div class="footer-column-four">
         <span class="text">DESIGNED BY</span>
-        <img src="./assets/images/Bitmap (2).webp" alt="">
+        <img src="./assets/images/images.desktop/Bitmap (2).webp" alt="">
       </div>
 
     </div>
