implement for ui desktop tablet mobile

--- a/dreamshare.html
+++ b/dreamshare.html
@@ -92,7 +92,7 @@
         </div>
 
         <div class="see-other-partners">
-          <span>See other partners</span>
+          <span>See other partner</span>
         </div>
 
       </div>
